--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,9 +45,9 @@ jobs:
     runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
-      - name: Install Toolchain
-        shell: cmd
-        run: ./gradlew installRoboRioToolchain
+      # - name: Install Toolchain
+      #   shell: cmd
+      #   run: ./gradlew installRoboRioToolchain
       - name: Build
         shell: cmd
         run: ./gradlew build
